syntax = "proto3";

package contact;

option java_package = "com.scratch.contact";
option java_outer_classname = "ContactProto";

message Contact {

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2;
  }

  repeated PhoneNumber phones = 1;
}